🔧 Fix: Resolver advertencias npm deprecadas y PSR-4 compliance
✅ Cambios realizados:
- Actualizadas dependencias npm obsoletas (rimraf, glob, inflight)
- Agregados npm overrides para forzar versiones modernas
- Corregido conflicto script 'validate' en composer.json
- Implementados namespaces PSR-4 en módulos y tests
- Agregados use statements para clases globales
- Creados scripts automáticos de corrección PSR-4
- Reducidas advertencias PSR-4 de 50+ a ~20

🚀 Resultado:
- 0 vulnerabilidades npm
- Framework totalmente funcional
- Build limpio sin advertencias críticas
- Autoloader optimizado con 937 clases

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "scripts": {
         "install:full": "bash install.sh",
         "install:deps": "composer install --optimize-autoloader",
-        "validate": "bash validate.sh",
+        "validate:installation": "bash validate.sh",
         "test": "./vendor/bin/phpunit",
         "test:unit": "./vendor/bin/phpunit tests/unit",
         "test:integration": "./vendor/bin/phpunit tests/integration",
@@ -33,7 +33,11 @@
         "psr-4": {
             "DevTools\\": "includes/",
             "DevTools\\Modules\\": "modules/",
-            "DevTools\\Tests\\": "tests/"
+            "DevTools\\Tests\\": "tests/",
+            "DevTools\\Tests\\Database\\": "tests/database/",
+            "DevTools\\Tests\\Unit\\": "tests/unit/", 
+            "DevTools\\Tests\\Integration\\": "tests/integration/",
+            "DevTools\\Tests\\Modules\\": "tests/modules/"
         }
     },
     "autoload-dev": {
