--- a/package.json
+++ b/package.json
@@ -31,28 +31,35 @@
   "author": "Dev-Tools Arquitectura 3.0",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.23.0",
-    "@babel/preset-env": "^7.23.0",
-    "autoprefixer": "^10.4.16",
-    "babel-loader": "^9.1.3",
+    "@babel/core": "^7.27.0",
+    "@babel/preset-env": "^7.27.0",
+    "autoprefixer": "^10.4.20",
+    "babel-loader": "^9.2.1",
     "clean-webpack-plugin": "^4.0.0",
-    "core-js": "^3.33.0",
-    "css-loader": "^6.8.1",
-    "css-minimizer-webpack-plugin": "^5.0.1",
-    "mini-css-extract-plugin": "^2.7.6",
-    "postcss": "^8.4.31",
-    "postcss-loader": "^7.3.3",
-    "rimraf": "^5.0.5",
-    "sass": "^1.69.5",
-    "sass-loader": "^13.3.2",
-    "terser-webpack-plugin": "^5.3.9",
-    "webpack": "^5.89.0",
-    "webpack-bundle-analyzer": "^4.9.1",
+    "core-js": "^3.39.0",
+    "css-loader": "^6.11.0",
+    "css-minimizer-webpack-plugin": "^7.0.0",
+    "del": "^7.1.0",
+    "mini-css-extract-plugin": "^2.9.0",
+    "postcss": "^8.5.0",
+    "postcss-loader": "^8.1.0",
+    "rimraf": "^6.0.1",
+    "sass": "^1.89.0",
+    "sass-loader": "^16.0.3",
+    "terser-webpack-plugin": "^5.3.10",
+    "webpack": "^5.99.0",
+    "webpack-bundle-analyzer": "^4.10.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "webpack-dev-server": "^5.1.0"
   },
   "dependencies": {
     "bootstrap": "^5.3.2"
+  },
+  "overrides": {
+    "del": "^7.1.0",
+    "glob": "^11.0.0",
+    "rimraf": "^6.0.1",
+    "inflight": "npm:@isaacs/ttlcache@^1.4.1"
   },
   "browserslist": [
     "> 1%",
